# imageprocessing-spring-2022

./: CMakeLists.txt  README.md  build.vs.2019.cmake
lab01/: CMakeLists.txt  lab01.cpp
prj.labs/: CMakeLists.txt  lab02.cpp  lab03.cpp
prj.labs/K/: CMakeLists.txt  K.cpp
prj.labs/lab01/: lab01.report.md
prj.labs/lab02/: lab02.report.md
prj.labs/lab03/: lab03.cpp  lab03.report.md  lab03.report.md.in.txt
prj.labs/lab04/: lab04.cpp  Дворядкин_Кирилл_lab04_БПМ_19-4.md
